<resources>
    <string name="app_name">WeCarry</string>
    <string name="hello_world">Hello world!</string>
    <string name="help_txt">請輸入文字以便使用POST傳送:</string>
    <string name="txt_message_hint">請輸入文字</string>
    <string name="send">送出</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_gcmlaunch">GCMLaunch</string>
    <string name="title_activity_http_post">httpPost</string>
    <string name="title_activity_gcmhome">GCMhome</string>
    <string name="welcome_txt">GCM App</string>
    <string name="email">Email Address</string>
    <string name="login">Register Me</string>
    <string name="defaultmsg">Message sent by server will appear here.</string>
    <string name="msg_title">Message</string>
    <string name="user_title">Hello User</string>
    <string name="title_activity_exam_time_change">ExamTimeChangeActivity</string>
    <string name="password">Password</string>
    <string name="login_btn">Login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_user_exam">UserExamActivity</string>
    <string name="current_user">Admin</string>
    <string name="title_activity_gcm">GcmActivity</string>
    <string name="gcm_send_message">Token retrieved and sent to server!</string>
    <string name="registering_message">Generating InstanceID token...</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>

    <!--google sign in stuff-->
    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="person_photo_url_fmt">Photo url: %s</string>
    <string name="person_profile_url_fmt">Profile url: %s</string>
    <string name="person_email">Email: %s</string>

    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>
    <string name="title_activity_new_login">NewLoginActivity</string>
    <string name="title_activity_google_play_services">GooglePlayServicesActivity</string>
    <string name="title_activity_google_login">ThirdPartyLoginActivity</string>
    <string name="title_activity_fblogin">FBLogin</string>

</resources>
